[package]
name = "mdbook_header_footer"
version = "0.0.1"
edition = "2021"
description = "mdBook preprocessor to prepend header and append footer to certain chapters"
license = "MIT"
repository = "https://github.com/SichangHe/mdbook_header_footer"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
derive_everything = "0.1"
mdbook_fork4ls = { version = "0.4.40", default-features = false }
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "mdbook-header-footer"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
